force-app/main/default/objects/PMHR_FinalTeamMember__c/PMHR_FinalTeamMember__c.object-meta.xml
<CustomObject>
    <label>Final Team Member</label>
    <nameField>
        <displayFormat>FTM-{000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Final Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>