force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/Ability__c.field-meta.xml
<CustomField>
    <fullName>Ability__c</fullName>
    <label>Ability</label>
    <length>30</length>
    <type>Text</type>
</CustomField>