force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/FinalTeam__c.field-meta.xml
<CustomField>
    <fullName>FinalTeam__c</fullName>
    <label>Final Team</label>
    <referenceTo>PMHR_FinalTeam__c</referenceTo>
    <relationshipLabel>Final Team Members</relationshipLabel>
    <relationshipName>FinalTeamMembers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>