force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/HeldItem__c.field-meta.xml
<CustomField>
    <fullName>HeldItem__c</fullName>
    <label>Held Item</label>
    <length>30</length>
    <type>Text</type>
</CustomField>