force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/Move1__c.field-meta.xml
<CustomField>
    <fullName>Move1__c</fullName>
    <label>Move 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>