force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/Move2__c.field-meta.xml
<CustomField>
    <fullName>Move2__c</fullName>
    <label>Move 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>