force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/Move3__c.field-meta.xml
<CustomField>
    <fullName>Move3__c</fullName>
    <label>Move 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>