force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <length>30</length>
    <type>Text</type>
</CustomField>