force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/Pokemon__c.field-meta.xml
<CustomField>
    <fullName>Pokemon__c</fullName>
    <label>Pokemon</label>
    <referenceTo>PMHR_Pokemon__c</referenceTo>
    <relationshipLabel>Final Team Members</relationshipLabel>
    <relationshipName>FinalTeamMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>