force-app/main/default/objects/PMHR_FinalTeamMember__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Pokemon__r.Form__r.Type__c</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>