force-app/main/default/objects/PMHR_FinalTeamMember__c/validationRules/Nuzlocke_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>Nuzlocke_Mismatch</fullName>
    <active>true</active>
    <description>Pokemon must be from the same Nuzlocke as the Final Team</description>
    <errorConditionFormula>Pokemon__r.Nuzlocke__c &lt;&gt; FinalTeam__r.Nuzlocke__c</errorConditionFormula>
    <errorDisplayField>Pokemon__c</errorDisplayField>
    <errorMessage>Pokemon must be from the same Nuzlocke as the Final Team</errorMessage>
</ValidationRule>