force-app/main/default/objects/PMHR_FinalTeamMember__c/validationRules/Team_Members_Limit_Reached.validationRule-meta.xml
<ValidationRule>
    <fullName>Team_Members_Limit_Reached</fullName>
    <active>true</active>
    <description>The final team already has 6 members</description>
    <errorConditionFormula>FinalTeam__r.NumberOfMembers__c = 6</errorConditionFormula>
    <errorMessage>The final team already has 6 members</errorMessage>
</ValidationRule>