force-app/main/default/objects/PMHR_FinalTeamMember__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FinalTeam__c</columns>
    <columns>Pokemon__c</columns>
    <columns>Form__c</columns>
    <columns>Type__c</columns>
    <columns>Level__c</columns>
    <columns>Nature__c</columns>
    <columns>Ability__c</columns>
    <columns>HeldItem__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>